--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9409430592603722"
     crossorigin="anonymous"></script>
 
+  <!-- Fonts -->
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+  </style>
+
 </head>
 
 <body>
