--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Link directo al chat de WhatsApp</title>
+  <title>Chat de WhatsApp sin crear contacto</title>
 
   <!-- AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9409430592603722"
@@ -36,8 +36,7 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <noscript>Necesitas JavaScript para correr esta app.</noscript>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
